# Simulation_Galaxy_C

./: .gitlab-ci.yml  Makefile  README.md  default.latex  galaxie.md
css/: prism.css  prism.js
lib/: .gitignore  CMakeLists.txt  box.c  box.h  box_tests.c  galaxy.c  galaxy.h  galaxy_tests.c  main.c  node.c  node.h  node_tests.c  noise.c  quad_tree.c  quad_tree.h  quad_tree_tests.c  star.c  star.h  star_tests.c  vector.c  vector.h  vector_tests.c
